# automasun

./: .env.template  .gitignore  Makefile  README.md  __init__.py  analyze.py  ioutils.py  pipeline_config.template.yml  plot.py  pyproject.toml  read.py  timeutils.py
docs/: prepare_symlinks.drawio  preprocess_pressure.drawio
examples/: example_pipeline_config.yml
examples/pressure/location1_processed/: example-location1-20160602.csv  pressure-location1-20160602.csv
examples/pressure/location1_raw/: 160602_PTU300_log.txt
examples/pressure/location2_processed/: example-location2-20160602.csv  pressure-location2-20160602.csv  pressure-location2-20170602.csv
examples/pressure/location2_raw_2016/: aws_20160602.lst
examples/pressure/location2_raw_2017/: aws_20170602.lst
modules/: analyze.py  ioutils.py  pipeline.py  plot.py  pressureutils.py  syncutils.py  timeutils.py
tests/: fixtures.py  test_ioutils.py  test_pipeline.py  test_pressureutils.py  test_syncutils.py  test_timeutils.py
