[project]
name = "automasun"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pandas>=2.2.2",
    "h5py>=3.11.0",
    "numpy>=2.1.1",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "none"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
markers = [
    "only: only run selected tests",
]